Fixed some contrast problems to help others with color blindness

--- a/webpage/static/webpage/css/master.less
+++ b/webpage/static/webpage/css/master.less
@@ -38,8 +38,9 @@ body {
 
 a {
    text-decoration: none;
+   color: #03a9f4;
    &:visited {
-      color: blue;
+      color: #67daff;
    }
 }
 
